--- a/client/src/styles/pages/home/home.module.css
+++ b/client/src/styles/pages/home/home.module.css
@@ -10,7 +10,6 @@
 }
 .welcome {
   display: flex;
-  height: 100vh;
   width: 100%;
   padding-left: 0px;
   display: flex;
@@ -73,13 +72,12 @@ p {
 
 @media screen and (max-width: 480px) {
   .frontPage {
-    width: 90%;
+    max-width: 100% !important;
     flex-direction: column;
   }
   .welcome {
     display: flex;
     flex-direction: column-reverse;
-    height: 80vh;
     align-items: right;
     justify-content: space-evenly;
   }
@@ -91,7 +89,7 @@ p {
     flex-direction: column;
     width: 100%;
     height: auto;
-    max-height: 100%;
+    max-height: 80%;
     justify-content: space-evenly;
   }
   
